--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ spotify_searcher_notes.md
 full_stack_app_with_spotify_api_notes.md
 temp/*
 Questions-for-expert.md
+crud_api_tutorial_freecodecamp.md
 
 # Directories with old work
 frontend/*
