--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ full_stack_app_with_spotify_api_notes.md
 temp/*
 Questions-for-expert.md
 crud_api_tutorial_freecodecamp.md
+deployment_options.md
 
 # Directories with old work
 frontend/*
